GH-182: Upgrade Debezium to 1.7.1
Fixes https://github.com/spring-cloud/stream-applications/issues/182

* Upgrade Debezium dependency to 1.7.1
* Remove explicit dependencies for DBs and remove excludes for them from Debezium deps;
rely fully on whatever Debezium connectors bring for us
* Fix `EmbeddedEngine` for compatibility with the Debezium 1.7.1
* Fix CDC tests for the current state of Debezium results
* Fix Checkstyle violations in the MQTT modules

--- a/applications/sink/mqtt-sink/README.adoc
+++ b/applications/sink/mqtt-sink/README.adoc
@@ -24,6 +24,7 @@ $$keep-alive-interval$$:: $$the ping interval in seconds.$$ *($$Integer$$, defau
 $$password$$:: $$the password to use when connecting to the broker.$$ *($$String$$, default: `$$guest$$`)*
 $$persistence$$:: $$'memory' or 'file'.$$ *($$String$$, default: `$$memory$$`)*
 $$persistence-directory$$:: $$Persistence directory.$$ *($$String$$, default: `$$/tmp/paho$$`)*
+$$ssl-properties$$:: $$MQTT Client SSL properties.$$ *($$Map<String, String>$$, default: `$$<none>$$`)*
 $$url$$:: $$location of the mqtt broker(s) (comma-delimited list).$$ *($$String[]$$, default: `$$[tcp://localhost:1883]$$`)*
 $$username$$:: $$the username to use when connecting to the broker.$$ *($$String$$, default: `$$guest$$`)*
 
