--- a/functions/supplier/ftp-supplier/README.adoc
+++ b/functions/supplier/ftp-supplier/README.adoc
@@ -21,7 +21,7 @@ Once injected, you can use the `get` method of the `Supplier` to invoke it and t
 ## Configuration Options
 
 All configuration properties are prefixed with `ftp.supplier`.
-There are also properties that need to be used with the prefix `file.consumer`.
+There are also properties that need to be used with the prefix `ftp.consumer`.
 
 For more information on the various options available, please see link:src/main/java/org/springframework/cloud/fn/supplier/ftp/FtpSupplierProperties.java[FtpSupplierProperties].
 See link:src/main/java/org/springframework/cloud/fn/supplier/file/FileConsumerProperties.java[this] also.
